--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "typescript": "~5.6.2",
     "vite": "^6.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.7.8"
   }
 }
